Fixing 1 CodeSmells reportado por SonarQube